--- a/tutorial2.html
+++ b/tutorial2.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Bootstrap 2</title>
+    <title>Sir Muhammad FarhanBootstrap 2</title>
 </head>
 
 <body>
 
         
 
-       <h1>Our Product</h1>
+       <h1>Our Products </h1>
 
        <div class="container">
         <div class="row">
