--- a/tutorial1.html
+++ b/tutorial1.html
@@ -15,33 +15,7 @@
 
 <body>
 
-    <!-- HTTP : hyper text tranfer protocol -->
-
-    <!-- HTTP HTTPS  S stand kar ta he security
-     8 bits equal to 1 byte
-    1 byte put in one character A , B , D -->
-
-    <!-- Bootstrap depend kar ta he CSS Classes .. -->
-
-
-    <!-- <h1 class="text-red">Muhammad Farhan</h1>
-
-    <h3 class="text-red">Muhammad Ali</h3>
-
-    <h2 >Arif Alvi</h2>
-
-    <h4>Imran Khan</h4> -->
-
-    <!-- Bootstrap use two methods  -->
-    <!-- 1. CDN
-    2. Download kar ky
-
-     -->
-
-    <!-- Bootstrap 3 , 4  -->
-
-    <!-- CSS , JS , JQuery -->
-
+<h1>Muhammad Farhan</h1>
 
     <!-- Bootstrap 5  -->
     <!-- CSS , JS it is use for event perform work -->
